[tool.poetry]
name = "your-project-name"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
discord.py = "2.0.0"
asyncpg = "0.23.0"
requests = "2.26.0"
rich = "13.9.4"
typer = "0.15.2"
uvloop = "0.21.0"
watchfiles = "1.0.4"
websockets = "15.0.1"
shellingham = "1.5.4"
sniffio = "1.3.1"
markdown-it-py = "3.0.0"
pygments = "2.19.1"
mdurl = "0.1.2"
psycopg2-binary = "2.9.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"